@@ -1,26 +1,31 @@
 
 process TRANSFER =
 {
-   include "FWCore/MessageLogger/data/MessageLogger.cfi"
+  // include "FWCore/MessageLogger/data/MessageLogger.cfi"
   untracked PSet options = 
   {
     untracked vstring Rethrow = { "ProductNotFound", "TooManyProducts", "TooFewProducts" }
   }
-        source = NewEventStreamFileReader
-         {
-            untracked vstring fileNames = {'file:/scratch2/cheung/closed/mtcc.00000000.0001.A.storageManager.0.0000.dat'}
+  source = NewEventStreamFileReader
+  {
+    untracked vstring fileNames = {'file:/scratch2/cheung/closed/test.00000001.0001.A.storageManager.0.0000.dat'}
 
-            int32 max_event_size = 7000000
-            int32 max_queue_depth = 5
-         }
+    int32 max_event_size = 7000000
+    int32 max_queue_depth = 5
+  }
 
-        module a1 = StreamThingAnalyzer { string product_to_get="m2" }
+  module a1 = StreamThingAnalyzer { string product_to_get="m2" }
 
-        module out = PoolOutputModule
-         {
-           untracked string fileName = "/scratch2/cheung/mysimple.root"
-         }
+  module contentAna = EventContentAnalyzer {
+    //untracked bool verbose = true
+    //untracked bool getData = true
+  }
 
-        path p1 =  { a1 }
-        endpath e1 = { out }
+  module out = PoolOutputModule
+  {
+    untracked string fileName = "/scratch2/cheung/mysimple.root"
+  }
+
+  path p1 =  { contentAna, a1 }
+  endpath e1 = { out }
 }
