@@ -1,3 +1,9 @@
+2008-09-03  Harry Cheung <cheung@fnal.gov>
+
+	* tag V03-14-11
+	* Put in Emilio's fix for his workloop code when in failed state
+	* Change the value of the real default for the file closing timeout to 45s
+
 2008-09-02  Harry Cheung <cheung@fnal.gov>
 
 	* tag V03-14-10
